[package]
name = "clickhouse-hang"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clickhouse-rs = "0.1.14"
futures = "0.1.29"
tokio = "0.1.22"
env_logger = "0.7.0"
